--- a/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
@@ -55,6 +55,9 @@
                                                         <button type="submit" class="btn btn-link" style="text-decoration: none; color: inherit;">Logout</button>
                                                     </form>
                                                 </li>
+                                                <li>
+                                                    <a asp-action="Index" asp-controller="UserProfile"> Profile </a>
+                                                </li>
                                             </ul>
                                         </li>
                                     }
