--- a/Hotel/Hotel/Views/UserProfile/Index.cshtml
+++ b/Hotel/Hotel/Views/UserProfile/Index.cshtml
@@ -48,8 +48,9 @@
 			color: #666;
 			margin-top: 20px;
 		}
-		.row{
-			/* margin-top: 10%; */
+
+		.cardheader {
+			margin-top: 10%;
 		}
 	</style>
 </head>
@@ -65,7 +66,7 @@
 								</div> *@
 							</div>
 							<div class="flex-grow-1">
-								<div>
+								<div class="cardheader">
 									<h5 class="font-size-16 mb-1"> Name : @Model.UserName</h5>
 									<p class="text-muted font-size-13"> Surname : @Model.UserSurname</p>
 									<p class="text-muted font-size-13">Email : @Model.UserEmail</p>
