--- a/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,6 +14,10 @@
 	<!-- preloader css -->
 	<link rel="stylesheet" href="~/admin/assets/css/preloader.min.css" type="text/css" />
 
+    <!-- Datatables -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
+
 	<!-- Bootstrap Css -->
 	<link href="~/admin/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
 	<!-- Icons Css -->
@@ -469,6 +473,10 @@
 		<script src="~/admin/assets/libs/simplebar/simplebar.min.js"></script>
 		<script src="~/admin/assets/libs/node-waves/waves.min.js"></script>
 		<script src="~/admin/assets/libs/feather-icons/feather.min.js"></script>
+        <!-- Datatables -->
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 		<!-- pace js -->
 		<script src="~/admin/assets/libs/pace-js/pace.min.js"></script>
 
