--- a/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -222,7 +222,7 @@
                         </li>
                         <li>
                             <a asp-controller="AboutCompany" asp-action="Index">
-                                <i class="dripicons-user-group"></i>
+                                <i class="fas fa-laugh-wink"></i>
                                 <span data-key="t-dashboard">About Company</span>
                             </a>
                         </li>
@@ -246,20 +246,11 @@
                             </a>
                         </li>
                         <li>
-                            <a href="javascript: void(0);" class="has-arrow">
+                            <a asp-controller="Reservation" asp-action="Index">
                                 <i data-feather="users"></i>
-                                <span data-key="t-authentication">Authentication</span>
+                                <span data-key="t-authentication">User And Reservations</span>
                             </a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="auth-login.html" data-key="t-login">Login</a></li>
-                                <li><a href="auth-register.html" data-key="t-register">Register</a></li>
-                                <li><a href="auth-recoverpw.html" data-key="t-recover-password">Recover Password</a></li>
-                                <li><a href="auth-lock-screen.html" data-key="t-lock-screen">Lock Screen</a></li>
-                                <li><a href="auth-logout.html" data-key="t-logout">Log Out</a></li>
-                                <li><a href="auth-confirm-mail.html" data-key="t-confirm-mail">Confirm Mail</a></li>
-                                <li><a href="auth-email-verification.html" data-key="t-email-verification">Email Verification</a></li>
-                                <li><a href="auth-two-step-verification.html" data-key="t-two-step-verification">Two Step Verification</a></li>
-                            </ul>
+
                         </li>
                     </ul>
 
