--- a/Hotel/Hotel/Views/Shared/Components/Footer/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Footer/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- footer area start -->
+﻿
+<!-- footer area start -->
 <footer class="main-footer bgc-black-with-lighting pt-100 rel z-1">
     <div class="container">
         <div class="row justify-content-xl-between justify-content-between">
@@ -58,6 +59,7 @@
             </div>
         </div>
     </div>
+
     <div class="bg-lines">
         <span></span><span></span>
         <span></span><span></span>
