--- a/Hotel/Hotel/Views/Room/Details.cshtml
+++ b/Hotel/Hotel/Views/Room/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Hotel.Models.Room
+﻿@using System.Security.Claims
+@model Hotel.Models.Room
 
 <!-- Room Details Area start -->
 <section class="room-details-area py-130 rpy-100 rel z-2">
@@ -35,10 +36,6 @@
                             <span style="color:orange; font-size:1.7rem; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">@Model.RoomStatus.StatusName</span>
                         </div>
                     </div>
-
-
-
-
                     <div class="room-details-images mt-45 wow fadeInUp delay-0-2s">
                         @foreach (var img in Model.Images)
                         {
@@ -91,7 +88,229 @@
                     <a class="theme-btn w-100" asp-action="Index" asp-controller="Room">Search</a>
                 }
             </div>
-
         </div>
     </div>
 </section>
+
+<!-- Room Comments Area start -->
+<style>
+    .be-comment-block {
+        margin-top: 20px;
+        background-color: #e9ebee;
+        margin-bottom: 50px !important;
+        border: 1px solid #edeff2;
+        border-radius: 2px;
+        padding: 50px 70px;
+        border: 1px solid #ffffff;
+    }
+
+    .comments-title {
+        font-size: 26px;
+        color: #262626;
+        margin-bottom: 15px;
+        font-family: 'Conv_helveticaneuecyr-bold';
+    }
+
+    .be-img-comment {
+        width: 60px;
+        height: 60px;
+        float: left;
+        margin-bottom: 15px;
+    }
+
+    .be-ava-comment {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+    }
+
+    .be-comment-content {
+        margin-left: 80px;
+    }
+
+        .be-comment-content span {
+            display: inline-block;
+            width: 49%;
+            margin-bottom: 15px;
+        }
+
+    .be-comment-name {
+        font-size: 20px;
+        font-family: 'Conv_helveticaneuecyr-bold';
+    }
+
+    .be-comment-content a {
+        color: #383b43;
+    }
+
+    .be-comment-time {
+        text-align: right;
+    }
+
+    .be-comment-time {
+        font-size: 11px;
+        color: #b4b7c1;
+    }
+
+    .be-comment-text {
+        color: #7a8192;
+        display: block;
+        background: #f6f6f7;
+        border: 1px solid #edeff2;
+        padding: 15px 20px 20px 20px;
+    }
+
+    .form-group.fl_icon .icon {
+        position: absolute;
+        top: 1px;
+        left: 16px;
+        width: 48px;
+        height: 48px;
+        background: #f6f6f7;
+        color: #b5b8c2;
+        text-align: center;
+        line-height: 50px;
+        -webkit-border-top-left-radius: 2px;
+        -webkit-border-bottom-left-radius: 2px;
+        -moz-border-radius-topleft: 2px;
+        -moz-border-radius-bottomleft: 2px;
+        border-top-left-radius: 2px;
+        border-bottom-left-radius: 2px;
+    }
+
+    .form-group .form-input {
+        font-size: 23px;
+        line-height: 50px;
+        font-weight: 400;
+        color: #b4b7c1;
+        width: 100%;
+        height: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border: 1px solid #edeff2;
+        border-radius: 3px;
+    }
+
+    .form-group.fl_icon .form-input {
+        padding-left: 70px;
+    }
+
+    .form-group textarea.form-input {
+        height: 150px;
+    }
+</style>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+    <div class="be-comment-block">
+        <h1 class="comments-title">Comments (@Model.Comments.Count())</h1>
+        @foreach (var comment in Model.Comments)
+        {
+            <div class="be-comment">
+                <div class="be-comment-content">
+                    <span class="be-comment-name">
+                        <a href="#">@comment.UserName</a>
+                    </span>
+                    <span class="be-comment-time">
+                        <i class="fa fa-clock-o"></i>
+                        @comment.CreatedAt.ToString("dd/MM/yyyy HH:mm:ss")
+                    </span>
+                    <p class="be-comment-text">
+                        @comment.Content
+                    </p>
+                    @if (comment.UserId == User.FindFirstValue(ClaimTypes.NameIdentifier) || User.IsInRole("Admin"))
+                    {
+                        <button class="btn btn-danger btn-sm delete-comment" data-id="@comment.Id">Delete</button>
+                    }
+                </div>
+            </div>
+        }
+
+        <form id="commentForm" class="form-block">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="form-group fl_icon">
+                        <div class="icon"><i class="fa fa-user"></i></div>
+                        <input class="form-input" type="text" value="Name : @User.Identity.Name" disabled>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <textarea class="form-input" id="commentContent" placeholder="Your text"></textarea>
+                    </div>
+                </div>
+                <button type="button" id="submitComment" class="btn btn-primary pull-right">Submit</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+@section Scripts {
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script>
+        $(document).ready(function () {
+            $('#submitComment').click(function () {
+                var roomId = '@Model.Id';
+                var content = $('#commentContent').val();
+                if (content.trim() === '') {
+                    Swal.fire('Error', 'Comment content cannot be empty.', 'error');
+                    return;
+                }
+                $.ajax({
+                    url: '@Url.Action("Create", "Comments")',
+                    type: 'POST',
+                    data: {
+                        roomId: roomId,
+                        content: content
+                    },
+                    success: function (response) {
+                        if (response.success) {
+                            Swal.fire('Success', 'Comment added successfully!', 'success')
+                                .then(() => {
+                                    location.reload();
+                                });
+                        } else {
+                            Swal.fire('Error', response.error, 'error');
+                        }
+                    },
+                    error: function (xhr) {
+                        Swal.fire('Error', 'An error occurred while adding the comment.', 'error');
+                    }
+                });
+            });
+
+            $('.delete-comment').click(function () {
+                var commentId = $(this).data('id');
+                Swal.fire({
+                    title: 'Are you sure?',
+                    text: "You won't be able to revert this!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: '@Url.Action("Delete", "Comments")',
+                            type: 'POST',
+                            data: { id: commentId },
+                            success: function (response) {
+                                if (response.success) {
+                                    Swal.fire('Deleted!', 'Your comment has been deleted.', 'success')
+                                        .then(() => {
+                                            location.reload();
+                                        });
+                                } else {
+                                    Swal.fire('Error', response.error, 'error');
+                                }
+                            },
+                            error: function (xhr) {
+                                Swal.fire('Error', 'An error occurred while deleting the comment.', 'error');
+                            }
+                        });
+                    }
+                })
+            });
+        });
+    </script>
+}
