--- a/Hotel/Hotel/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Views/Shared/_Layout.cshtml
@@ -157,7 +157,6 @@
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.11/signalr.min.js"></script>
-
         <script>
             function setCookie(name, value, days) {
                 var expires = "";
@@ -225,25 +224,17 @@
                 connection.invoke("SendMessage", defaultUser, message)
                     .then(() => {
                         console.log("Message sent");
+
+                     
+                        document.getElementById("message").value = '';
                     })
                     .catch(function (err) {
                         console.error("Error sending message: ", err.toString());
                     });
 
-                var encodedMsg = defaultUser + ": " + message;
-                var li = document.createElement("li");
-                li.textContent = encodedMsg;
-                li.className = 'message other';
-                document.getElementById("discussion").appendChild(li);
-                saveMessage(encodedMsg);
-
-                document.getElementById("message").value = '';
-
                 setTimeout(function () {
                     canSendMessage = true;
                 }, 500);
-
-                document.querySelector(".messages").scrollTop = document.querySelector(".messages").scrollHeight;
             }
 
             function saveMessage(message) {
@@ -308,6 +299,196 @@
                 }, 3000);
             });
         </script>
+       @*  <script>
+            function setCookie(name, value, days) {
+                var expires = "";
+                if (days) {
+                    var date = new Date();
+                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                    expires = "; expires=" + date.toUTCString();
+                }
+                document.cookie = name + "=" + (value || "") + expires + "; path=/";
+            }
+
+            function getCookie(name) {
+                var nameEQ = name + "=";
+                var ca = document.cookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+                }
+                return null;
+            }
+
+            function eraseCookie(name) {
+                document.cookie = name + '=; Max-Age=-99999999;';
+            }
+
+            var currentUser = '@User.Identity.Name';
+            var defaultUser = currentUser || "User";
+            var canSendMessage = true;
+
+            document.addEventListener('DOMContentLoaded', (event) => {
+                var chatStatus = getCookie("chatOpen");
+                if (chatStatus === "true") {
+                    openForm();
+                }
+                loadMessages();
+            });
+
+            function openForm() {
+                document.getElementById("myForm").style.display = "flex";
+                setCookie("chatOpen", "true", 7);
+            }
+
+            function closeForm() {
+                document.getElementById("myForm").style.display = "none";
+                setCookie("chatOpen", "false", 7);
+            }
+
+            function sendMessage() {
+                if (!canSendMessage) {
+                    return;
+                }
+
+                canSendMessage = false;
+
+                var message = document.getElementById("message").value.trim();
+
+                if (message === "") {
+                    canSendMessage = true;
+                    return;
+                }
+
+                console.log("Sending message: " + message);
+
+                connection.invoke("SendMessage", defaultUser, message)
+                    .then(() => {
+                        console.log("Message sent");
+
+                        var encodedMsg = defaultUser + ": " + message;
+                        var li = document.createElement("li");
+                        li.textContent = encodedMsg;
+                        li.className = 'message other';
+                        document.getElementById("discussion").appendChild(li);
+                        saveMessage(encodedMsg);
+                        document.querySelector(".messages").scrollTop = document.querySelector(".messages").scrollHeight;
+                    })
+                    .catch(function (err) {
+                        console.error("Error sending message: ", err.toString());
+                    });
+
+                document.getElementById("message").value = '';
+
+                setTimeout(function () {
+                    canSendMessage = true;
+                }, 500);
+            }
+
+
+            // function sendMessage() {
+            //     if (!canSendMessage) {
+            //         return;
+            //     }
+
+            //     canSendMessage = false;
+
+            //     var message = document.getElementById("message").value.trim();
+
+            //     if (message === "") {
+            //         canSendMessage = true;
+            //         return;
+            //     }
+
+            //     console.log("Sending message: " + message);
+
+            //     connection.invoke("SendMessage", defaultUser, message)
+            //         .then(() => {
+            //             console.log("Message sent");
+            //         })
+            //         .catch(function (err) {
+            //             console.error("Error sending message: ", err.toString());
+            //         });
+
+            //     var encodedMsg = defaultUser + ": " + message;
+            //     var li = document.createElement("li");
+            //     li.textContent = encodedMsg;
+            //     li.className = 'message other';
+            //     document.getElementById("discussion").appendChild(li);
+            //     saveMessage(encodedMsg);
+
+            //     document.getElementById("message").value = '';
+
+            //     setTimeout(function () {
+            //         canSendMessage = true;
+            //     }, 500);
+
+            //     document.querySelector(".messages").scrollTop = document.querySelector(".messages").scrollHeight;
+            // }
+
+            function saveMessage(message) {
+                let messages = JSON.parse(localStorage.getItem('messages')) || [];
+                messages.push(message);
+                localStorage.setItem('messages', JSON.stringify(messages));
+            }
+
+            function loadMessages() {
+                let messages = JSON.parse(localStorage.getItem('messages')) || [];
+                messages.forEach(function (message) {
+                    var li = document.createElement("li");
+                    li.textContent = message;
+                    li.className = 'message other';
+                    document.getElementById("discussion").appendChild(li);
+                });
+                document.querySelector(".messages").scrollTop = document.querySelector(".messages").scrollHeight;
+            }
+
+            document.getElementById("sendmessage").addEventListener("click", function (event) {
+                event.preventDefault();
+                sendMessage();
+            });
+
+            document.getElementById("message").addEventListener("keypress", function (event) {
+                if (event.key === "Enter" && !event.shiftKey) {
+                    event.preventDefault();
+                    sendMessage();
+                } else {
+                    connection.invoke("Typing", defaultUser).catch(function (err) {
+                        console.error(err.toString());
+                    });
+                }
+            });
+
+            var connection = new signalR.HubConnectionBuilder().withUrl("/chatHub").build();
+
+            connection.start().then(() => {
+                console.log("Connection started for User");
+            }).catch(function (err) {
+                console.error(err.toString());
+            });
+
+            connection.off("ReceiveMessage");
+            connection.on("ReceiveMessage", function (user, message) {
+                console.log("ReceiveMessage event triggered");
+                var encodedMsg = user + ": " + message;
+                var li = document.createElement("li");
+                li.textContent = encodedMsg;
+                li.className = 'message other';
+                document.getElementById("discussion").appendChild(li);
+                saveMessage(encodedMsg);
+                document.querySelector(".messages").scrollTop = document.querySelector(".messages").scrollHeight;
+            });
+
+            connection.off("UserTyping");
+            connection.on("UserTyping", function (user) {
+                var typingIndicator = document.getElementById("typing");
+                typingIndicator.innerText = user + " is typing...";
+                setTimeout(function () {
+                    typingIndicator.innerText = "";
+                }, 3000);
+            });
+        </script> *@
 
     </body>
 </html>
